# lousa-assurance

./: .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .tool-versions  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  calculate_posture.py  docker-compose.yml  mkdocs.yml  project.yaml  pyproject.toml  pytest.ini  risk-note-47.yaml  risk_note.schema.json  safety_protocol.py
.github/: CODEOWNERS  commit_template.txt
.github/workflows/: assure.yml  ci.yml  pr-labels.yml
ci/: coverage-baseline.json
docs/: README.md  index.md  provenance-audit-files.txt  provenance-audit.md
docs/adr/: 0001-repo-standardization.md  README.md
examples/: assurance_case.yaml  kripke_model.yaml  latency_risk.yaml  logging_config.yaml
scripts/: add_spdx_header.py  bootstrap  bootstrap.ps1  build  build.ps1  check  check.ps1  clean  clean.ps1  common.ps1  common.sh  coverage  coverage.ps1  dev  dev.ps1  e2e  e2e.ps1  fmt  fmt.ps1  gen-docs  gen-docs.ps1  generate_notebook.py  lint  lint.ps1  migrate  migrate.ps1  package  package.ps1  release  release.ps1  run_assurance.py  sbom  sbom.ps1  security-scan  security-scan.ps1  test  test.ps1  typecheck  typecheck.ps1  update-deps  (+1 more)
src/: calculate_posture.py
src/lousa/: __init__.py  assurance.py  cli.py  dsl.py  dsl_schema.json  epistemic.py  eval.py  evoi.py  gsn.py  logging.py  logs.py  models.py  notebook.py  provenance.py  psychometrics.py  trust.py  verification.py
src/lousa/legacy/: cli.py  eval.py  models.py  provenance.py
src/lousa/schemas/: risk_note.schema.json
tests/: test_cli_pipeline.py  test_eval.py  test_posture_logic_unit.py
tests/unit/: test_eval.py  test_logging.py
