[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lousa-assurance"
version = "0.1.0"
description = "A framework for evaluating temporal and epistemic assurance claims"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.6",
    "PyYAML>=6.0",
    "typer>=0.12",
    "graphviz>=0.20",
    "networkx>=3.2",
    "structlog>=24.1",
]

[project.scripts]
lousa = "lousa.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.3.0",
    "black>=24.0",
    "pre-commit>=3.0",
    "yamllint>=1.33"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"lousa" = ["schemas/risk_note.schema.json"]

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'
